01-networking/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  labels:
    app: backend-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-demo
  template:
    metadata:
      labels:
        app: backend-demo
    spec:
      containers:
      - name: backend
        image: httpd:alpine
        ports:
        - containerPort: 80
