01-networking/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx0deploy
  labels:
    app: nginx-demo

spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-demo
  template: 
    metadata:
      labels:
        app: nginx-demo
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
