01-networking/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  type: ClusterIP
  selector:
    app: backend-demo
  ports:
  - port: 80
    targetPort: 80
